# memfs

./: CMakeLists.txt  README.md  layout.drawio
.github/workflows/: cmake.yml
include/: memfs-defs.h  memfs-disk.h  memfs.h
src/: memfs-crc.c  memfs-util.c  memfs.c
src/include/: memfs-crc.h  memfs-private.h  memfs-util.h
tests/: CMakeLists.txt  test-basic.cpp
